--- a/TicketTracker/TicketTracker.csproj
+++ b/TicketTracker/TicketTracker.csproj
@@ -186,6 +186,9 @@
     <Compile Include="Models\CardView.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\TaskComment.cs" />
+    <Compile Include="Models\TaskHistory.cs" />
+    <Compile Include="Models\TaskView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -2205,6 +2208,9 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Home\TaskView.cshtml" />
+    <Content Include="Views\Home\BoardView.cshtml" />
+    <Content Include="Views\Home\ListView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
